fixed project description

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 AUTHOR: Ryan Conklin
 DATE:   8/29/2016
-DESCRIPTION: A project made to demonstrate the capabilities of WebGL through an interactive molecule exploration application.
+DESCRIPTION: A project made to demonstrate the capabilities of WebGL through an interactive audio visualizer
 -->
 <!DOCTYPE html>
 <html lang="en">
