added package.json and added dependencies for each external library that was being used at its correct version. split the main.js up into multiple smaller files with function classes to manage their own parts. javascript is bundled, then minified, scss is converted to css, and assets are copied into a public folder which should be the final everything. npm scripts can accomplish all of that and tar up the result.

--- a/basic.html
+++ b/basic.html
@@ -14,11 +14,11 @@ canvas{
 <div id="audio_box"></div>
 <canvas id="analyser_render" width="720" height="300"></canvas>
 <script>
-    //create new instance of audio 
+    //create new instance of audio
     var audio = new Audio();
 	audio.crossOrigin = "anonymous";
     //audio.src = 'http://listen.djcmedia.com/hrhradiohigh';
-	audio.src = 'Cinema.mp3';
+	audio.src = 'dothemath.mp3';
     audio.controls = true;
     audio.loop = true;
     audio.autoplay = true;
